Fix displaying long comments on mobile

--- a/static/css/comments.css
+++ b/static/css/comments.css
@@ -43,6 +43,11 @@
   cursor: pointer
 }
 
+.comment a,
+.comment p {
+  word-break: break-word
+}
+
 #spinner {
   display: none;
   margin-bottom: 1em;
